<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartCoach</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Registrieren</string>
    <string name="tv_password">Passwort</string>
    <string name="tv_login">Login</string>
    <string name="title_activity_register">Registrieren</string>
    <string name="title_activity_main_window">MainWindow</string>
    <string name="tv_welcome">Welcome</string>
    <string name="SmartCoach">SmartCoach</string>
    <string name="title_activity_routine">Übung</string>
    <string name="title_activity_android_list_view_cursor_adaptor">AndroidListViewCursorAdaptorActivity</string>
    <string name="filter">Suchen&#8230;</string>
    <string name="cd_list_image">ListImage</string>
    <string name="cd_list_mg">ListMusclegroup</string>
    <string name="title_activity_single_routine_view">SingleRoutineView</string>
    <string name="textTab1">Tab1</string>
    <string name="title_activity_video_viewer">VideoViewer</string>
    <string name="title_activity_add_routine">AddRoutine</string>
    <string name="tv_add">Übung hinzufügen</string>
    <string name="btn_abbrechen">Abbrechen</string>
    <string name="btn_hinzufuegen">Hinzufügen</string>
    <string name="tv_name">Übungsname</string>
    <string name="tv_muscleGroup">Muskelgruppe</string>
    <string name="tV_description">Beschreibung</string>
    <string name="title_activity_launch">Launch</string>
    <string name="title_activity_workout">Workout</string>
    <string name="btn_endWorkout">Training beenden</string>
    <string name="btn_showStats">Statistik</string>
    <string name="anzeigen">Zeit anzeigen</string>
    <string name="label_trainingbeenden">Training beenden</string>

</resources>
