<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_radial"
    android:gravity="center_horizontal">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/icon"
            android:contentDescription="@string/SmartCoach" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_add"
        android:textSize="26sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Llayout">

        <TextView
            android:id="@+id/tV_Login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_name" />

        <EditText
            android:id="@+id/et_addroutinename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/tV_Passoword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_muscleGroup" >

        </TextView>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tV_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tV_description" />

        <EditText
            android:id="@+id/tv_addroutinedesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LinOut">

        <Button
            android:id="@+id/btn_abbrechen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_abbrechen" />

        <Button
            android:id="@+id/btn_hinzufuegen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_hinzufuegen" />

    </LinearLayout>

</LinearLayout>